[gd_scene load_steps=2 format=3 uid="uid://dfalcxktoa3d6"]

[ext_resource type="Script" path="res://menuUI/paused.gd" id="1_vy4ij"]

[node name="Paused" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_vy4ij")

[node name="Panel" type="Panel" parent="."]
modulate = Color(1, 1, 1, 0.647059)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/HBoxContainer"]
layout_mode = 2
alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="Panel/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="PausedLabel" type="Label" parent="Panel/HBoxContainer/VBoxContainer/MarginContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 44
text = "Game Paused"

[node name="GridContainer" type="GridContainer" parent="Panel/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="ResumeButton" type="Button" parent="Panel/HBoxContainer/VBoxContainer/GridContainer"]
custom_minimum_size = Vector2(155, 0)
layout_mode = 2
text = "Resume"

[node name="QuitButton" type="Button" parent="Panel/HBoxContainer/VBoxContainer/GridContainer"]
layout_mode = 2
text = "Quit"

[connection signal="pressed" from="Panel/HBoxContainer/VBoxContainer/GridContainer/ResumeButton" to="." method="_on_resume_button_pressed"]
[connection signal="pressed" from="Panel/HBoxContainer/VBoxContainer/GridContainer/QuitButton" to="." method="_on_quit_button_pressed"]
